cleaned up css comments, fixed text overflow on github thumbnail

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
 
 /* ==========================================================================
    Base styles
@@ -253,6 +245,10 @@ button.dropdown-btn {
   padding: 0;
 }
 
+.text-over-img a {
+  width: 100%;
+}
+
 .text-over-img:hover {
   color: black;
 }
@@ -304,7 +300,6 @@ button.dropdown-btn {
   (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
-
 
 
 /* ==========================================================================
